# goit-pweb-hw-06

./: README.md  connect.py  create_tables.py  decorator.py  insert_tables.py  main.py  pyproject.toml  select_sql.py
sql_query/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_D1.sql  query_D2.sql
